[Global] Header: Fixed z-index issues

--- a/resources/css/sass/components/global/_components.theme.global.header.scss
+++ b/resources/css/sass/components/global/_components.theme.global.header.scss
@@ -116,6 +116,7 @@
 		right: 0;
 		background: #FFF;
 		text-align: left;
+		z-index: 1000000;
 		position: absolute;
 		border: 1px solid $grey--light;
 		box-shadow: 0 2px 5px rgba(0,0,0,0.05);
